[project]
name = "tinker-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
    "bodyloop-sdk>=2026.4.13.2",
    "dash>=3.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]

[project.scripts]
tinker-uv = "tinker_uv.cli:main"

[tool.uv]
package = true
